@@ -9,24 +9,24 @@ package org.geoserver.wfs.json;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
+
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
-
 import org.geoserver.data.test.SystemTestData;
 import org.geoserver.wfs.WFSTestSupport;
 import org.junit.Test;
 
-/**
- * 
- * @author carlo cancellieri - GeoSolutions
- * 
- */
+/** @author carlo cancellieri - GeoSolutions */
 public class GeoJsonDescribeTest extends WFSTestSupport {
 
     @Test
     public void testDescribePrimitiveGeoFeatureJSON() throws Exception {
-        String output = getAsString("wfs?service=WFS&request=DescribeFeatureType&version=1.0.0&outputFormat="
-                + JSONType.json + "&typeName=" + getLayerId(SystemTestData.PRIMITIVEGEOFEATURE));
+        String output =
+                getAsString(
+                        "wfs?service=WFS&request=DescribeFeatureType&version=1.0.0&outputFormat="
+                                + JSONType.json
+                                + "&typeName="
+                                + getLayerId(SystemTestData.PRIMITIVEGEOFEATURE));
         testOutput(output);
     }
 
@@ -49,8 +49,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         // description
         int i = 0;
         assertEquals("description", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:string", props.getJSONObject(i).get("type"));
         assertEquals("string", props.getJSONObject(i).get("localType"));
@@ -58,8 +58,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // point property (second geometry)
         assertEquals("name", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:string", props.getJSONObject(i).get("type"));
         assertEquals("string", props.getJSONObject(i).get("localType"));
@@ -67,8 +67,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // surfaceProperty property
         assertEquals("surfaceProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("gml:Polygon", props.getJSONObject(i).get("type"));
         assertEquals("Polygon", props.getJSONObject(i).get("localType"));
@@ -76,8 +76,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // point property (second geometry)
         assertEquals("pointProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:Point", props.getJSONObject(i).get("type"));
         assertEquals("Point", props.getJSONObject(i).get("localType"));
@@ -85,8 +85,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // curve property (second geometry)
         assertEquals("curveProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:LineString", props.getJSONObject(i).get("type"));
         assertEquals("LineString", props.getJSONObject(i).get("localType"));
@@ -94,8 +94,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // int property
         assertEquals("intProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:int", props.getJSONObject(i).get("type"));
         assertEquals("int", props.getJSONObject(i).get("localType"));
@@ -103,8 +103,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // Uri property
         assertEquals("uriProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:string", props.getJSONObject(i).get("type"));
         assertEquals("string", props.getJSONObject(i).get("localType"));
@@ -112,8 +112,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // measurand property
         assertEquals("measurand", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:string", props.getJSONObject(i).get("type"));
         assertEquals("string", props.getJSONObject(i).get("localType"));
@@ -121,8 +121,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // dateProperty time
         assertEquals("dateTimeProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:date-time", props.getJSONObject(i).get("type"));
         assertEquals("date-time", props.getJSONObject(i).get("localType"));
@@ -130,8 +130,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // dateProperty time
         assertEquals("dateProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:date", props.getJSONObject(i).get("type"));
         assertEquals("date", props.getJSONObject(i).get("localType"));
@@ -139,8 +139,8 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // boolean
         assertEquals("decimalProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:number", props.getJSONObject(i).get("type"));
         assertEquals("number", props.getJSONObject(i).get("localType"));
@@ -148,19 +148,22 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
         ++i;
         // boolean
         assertEquals("booleanProperty", props.getJSONObject(i).get("name"));
-        assertEquals(new Integer(0), props.getJSONObject(i).get("minOccurs"));
-        assertEquals(new Integer(1), props.getJSONObject(i).get("maxOccurs"));
+        assertEquals(Integer.valueOf(0), props.getJSONObject(i).get("minOccurs"));
+        assertEquals(Integer.valueOf(1), props.getJSONObject(i).get("maxOccurs"));
         assertEquals(true, props.getJSONObject(i).get("nillable"));
         assertEquals("xsd:boolean", props.getJSONObject(i).get("type"));
         assertEquals("boolean", props.getJSONObject(i).get("localType"));
-
     }
 
     @Test
     public void testDescribePrimitiveGeoFeatureJSONP() throws Exception {
         JSONType.setJsonpEnabled(true);
-        String output = getAsString("wfs?service=WFS&request=DescribeFeatureType&version=1.0.0&outputFormat="
-                + JSONType.jsonp + "&typeName=" + getLayerId(SystemTestData.PRIMITIVEGEOFEATURE));
+        String output =
+                getAsString(
+                        "wfs?service=WFS&request=DescribeFeatureType&version=1.0.0&outputFormat="
+                                + JSONType.jsonp
+                                + "&typeName="
+                                + getLayerId(SystemTestData.PRIMITIVEGEOFEATURE));
         JSONType.setJsonpEnabled(false);
         // removing specific parts
         output = output.substring(0, output.length() - 2);
@@ -171,11 +174,15 @@ public class GeoJsonDescribeTest extends WFSTestSupport {
     @Test
     public void testDescribePrimitiveGeoFeatureJSONPCustom() throws Exception {
         JSONType.setJsonpEnabled(true);
-        String output = getAsString("wfs?service=WFS&request=DescribeFeatureType&version=1.0.0&outputFormat="
-                + JSONType.jsonp
-                + "&typeName="
-                + getLayerId(SystemTestData.PRIMITIVEGEOFEATURE)
-                + "&format_options=" + JSONType.CALLBACK_FUNCTION_KEY + ":custom");
+        String output =
+                getAsString(
+                        "wfs?service=WFS&request=DescribeFeatureType&version=1.0.0&outputFormat="
+                                + JSONType.jsonp
+                                + "&typeName="
+                                + getLayerId(SystemTestData.PRIMITIVEGEOFEATURE)
+                                + "&format_options="
+                                + JSONType.CALLBACK_FUNCTION_KEY
+                                + ":custom");
         JSONType.setJsonpEnabled(false);
         // removing specific parts
         assertTrue(output.startsWith("custom("));
